--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-appdirs==1.4.2
+appdirs==1.4.3
 dj-database-url==0.4.2
 Django==1.10.6
 django-classy-tags==0.8.0
 django-cookie-law==1.0.13
 packaging==16.8
-psycopg2==2.7
-pyparsing==2.1.10
-six==1.10.0
-waitress==1.0.2
-whitenoise==3.3.0
+psycopg2==2.7.3.1
+pyparsing==2.2.0
+six==1.11.0
+waitress==1.1.0
+whitenoise==4.0b4
